# Techno-CPP

./: .travis.yml  CMakeLists.txt  README.md  program.c  word_finder.c  word_finder.h
multi-thread/: program-MT.c  word_finder_MT.c  word_finder_MT.h
project/include/: hw-1.h
project/src/: hw-1.c  program.c
single-process/: program.c  word_finder.c  word_finder.h
testing/: ci-install-linux.sh  tests.cpp  tests_mt.cpp  tests_speed.cpp
testing/bigfiles/: answer.txt  big_file_create.sh
testing/bigfiles/cases/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  2.c  20.c  21.c  22.c  23.c  24.c  25.c  26.c  27.c  28.c  29.c  3.c  30.c  31.c  32.c  33.c  34.c  35.c  36.c  37.c  38.c  39.c  4.c  40.c  41.c  42.c  43.c  44.c  45.c  (+10 more)
testing/console_input/cases/: 3.txt  4.txt
testing/logic/: answer.txt
testing/logic/answers/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
testing/logic/cases/: 1.c  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  2.c  3.c  3.cpp  3.txt  4.c  4.txt  5.c  5.txt  6.c  6.txt  7.c  7.txt  8.c  8.txt  9.txt
testing/manyfiles/: answer.txt  many_files.sh
testing/mt_create/inner/inner-x2/: inner_file_x2.c
testing/mt_create_2/: scr.sh
testing/mt_create_2/size_1/: 1.c  size1_test10.c
testing/mt_create_2/size_10/: 10.c  size10_test1.c
testing/mt_create_2/size_2/: 2.c  size2_test9.c
testing/mt_create_2/size_3/: 3.c  size3_test8.c
testing/mt_create_2/size_4/: 4.c  size4_test7.c
testing/mt_create_2/size_5/: 5.c  size5_test6.c
testing/mt_create_2/size_6/: 6.c  size6_test5.c
testing/mt_create_2/size_7/: 7.c  size7_test4.c
testing/mt_create_2/size_8/: 8.c  size8_test3.c
testing/mt_create_2/size_9/: 9.c  size9_test2.c
testing/openfile/cases/: 2.txt
testing/sort/: 2.c
